Bug 840339 - Move inlined functions that depend on jsscriptinlines.h into CompileInfo-inl.h r=dvander